--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
   <a class="navbar-brand text-light" href="#">Recebimento de Cestas Básicas</a>
-  <a class="navbar-brand text-light" routerLink="#">Home</a>
-  <a class="navbar-brand text-light" href="">Verificar</a>
-  <a class="navbar-brand text-light" href="">Cadastrar</a>
-  <a class="navbar-brand text-light" href="">Login</a>
+  <a class="navbar-brand text-light" href="#">Home</a>
+  <a class="navbar-brand text-light" routerLink="/cadastro">Cadastrar</a>
+  <a class="navbar-brand text-light" routerLink="/verificar">Verificar</a>
+  <a class="navbar-brand text-light" routerLink="/login">Login</a>
 </nav>
-
-
 
 <router-outlet></router-outlet>
