Alteração no home e criei outro componente
Alterei algumas coisas da pagina Home. Criei a página do admin.

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -60,7 +60,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input type="text" formControlName="senha" class="form-control" style="width: 100%;">
+                        <input type="password" formControlName="senha" class="form-control" style="width: 100%;">
                     </div>
                 </div>
             </div>
