--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,1 +1,23 @@
-<p>about works!</p>
+<!-- <div class="container">
+    <div class="border border-dark">
+        <h1> Sobre</h1>
+    </div>
+    <div class="border border-dark">
+        <img src="" alt="">
+    </div>
+    
+</div> -->
+<div class="container">
+    <h1 >Sobre</h1>
+   <div class="row">
+        <div class="col-md-8 border border-dark">
+            <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+        </div>
+       <div class="col-md-4">
+           <div class="imgAbt border border-dark">
+               <img width="220" height="220" src="" />
+           </div>
+       </div>
+      
+   </div>
+</div>
