--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
-  <a class="navbar-brand text-light" href="#">Recebimento de Cestas Básicas</a>
-  <a class="navbar-brand text-light" href="#">Home</a>
-  <a class="navbar-brand text-light" routerLink="/cadastro">Cadastrar</a>
-  <a class="navbar-brand text-light" routerLink="/verificar">Verificar</a>
-  <a class="navbar-brand text-light" routerLink="/login">Login</a>
+<nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color: #14b2cc;">
+    <a class="navbar-brand text-light" href="#">Recebimento de Cestas Básicas</a>
+    <!-- class = "navbar-nav mr-auto " -> left
+    class = "navbar-nav ml-auto " -> right
+    class = "navbar-nav mx-auto " ->center--> 
+  <div class="navbar-nav ml-auto px-5">
+    <a class="nav-link text-light" href="#">Home</a>
+    <a class="nav-link text-light" routerLink="/cadastro">Cadastrar</a>
+    <a class="nav-link text-light" routerLink="/verificar">Verificar</a>
+    <a class="nav-link text-light" routerLink="/login">Login</a>
+  </div>
+  
 </nav>
 
 <router-outlet></router-outlet>
