mudança no home
mudança no html do home, coloquei o footer, mas falta inda ajeitar direito

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -10,8 +10,13 @@
 <div class="container">
     <h1 >Sobre</h1>
    <div class="row">
-        <div class="col-md-8 border border-dark">
-            <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+        <div class="col-md-8 mb-5">
+           
+            <p class="text-justify"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus fuga voluptatum beatae repellat soluta earum, nulla possimus vel ut enim doloremque quos amet, alias quod itaque sint accusamus cumque et.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate aliquid obcaecati ducimus deleniti consequuntur possimus reprehenderit, quod cum! Eaque aperiam iste cum perspiciatis. Quis culpa temporibus dicta quasi expedita iure?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias omnis ratione, enim veniam consequuntur quod eveniet ipsam dolor aperiam unde placeat, numquam amet dicta dignissimos, voluptates odio nobis nisi. Sint?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi totam sapiente culpa consequuntur assumenda distinctio laboriosam voluptates velit ipsa illum, recusandae commodi aliquid expedita, impedit sequi repellendus dolore vel vitae!lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id officia nesciunt modi nisi vel non qui. Temporibus, voluptas explicabo corporis, suscipit libero voluptatibus minus natus delectus commodi, fugiat deserunt eaque?</p>
         </div>
        <div class="col-md-4">
            <div class="imgAbt border border-dark">
