--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,11 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+<footer class="page-footer font-small" style="background-color: #14b2ccdb;">
+  <div class="footer-copyright text-center py-3 text-white">
+    &copy; 2021 Copyright
+  </div>
+
+
+</footer>
