--- a/src/app/pagina-adm/pagina-adm.component.html
+++ b/src/app/pagina-adm/pagina-adm.component.html
@@ -1,6 +1,8 @@
 <div class="container">
+    
     <div class="text-center mt-5">
         <h2>Listagem de cadastrados</h2>
+        <app-btn-create-cadastro (cadastroCreated)="onCadastroCreated($event)"></app-btn-create-cadastro>
     </div>
 
     <table class="table mt-5">
