--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,12 +1,4 @@
-<!-- <div class="container">
-    <div class="border border-dark">
-        <h1> Sobre</h1>
-    </div>
-    <div class="border border-dark">
-        <img src="" alt="">
-    </div>
-    
-</div> -->
+
 <div class="container">
     <h1 >Sobre</h1>
    <div class="row">
@@ -19,8 +11,8 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id officia nesciunt modi nisi vel non qui. Temporibus, voluptas explicabo corporis, suscipit libero voluptatibus minus natus delectus commodi, fugiat deserunt eaque?</p>
         </div>
        <div class="col-md-4">
-           <div class="imgAbt border border-dark">
-               <img width="220" height="220" src="" />
+           <div class="imgAbt ">
+               <img width="330" height="300" src="../../assets/img/cestas_basicas_hp.jpg"/>
            </div>
        </div>  
    </div>
