--- a/src/app/pagina-adm/btn-edit-cadastro/btn-edit-cadastro.component.html
+++ b/src/app/pagina-adm/btn-edit-cadastro/btn-edit-cadastro.component.html
@@ -1,1 +1,75 @@
-<p>btn-edit-cadastro works!</p>
+
+<button class="btn btn-light btn-xs mr-2" (click)="openCadastroFormModal(cadastroModalEditTemplate)">
+    <span class="pointer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-pencil-square " viewBox="0 0 16 16">
+            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+        </svg>
+    </span>
+</button>
+
+<ng-template #cadastroModalEditTemplate>
+    <form [formGroup]="cadastroForm" (ngSubmit)="editCadastro()">
+        <div class="modal-header">
+            <h4 class="modal-title pull-left">Editar Cadastro</h4>
+            <button type="button" class="close pull-right" aria-label="Fechar" (click)="closeModalCadastroForm()">
+            </button>
+        </div>
+
+        <div class="modal-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <fieldset class="form-group">
+                            <label for="nomeCliente">Nome</label>
+                            <input required type="text"  formControlName="nome" value=""
+                                class="form-control" style="width: 100%;" [(ngModel)]="nome">
+                        </fieldset>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="nome">CPF</label>
+                            <input type="text" formControlName="cpf" class="form-control" style="width: 100%;" [(ngModel)]="cpf">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="nome">Endereço</label>
+                            <input type="text" formControlName="endereco" class="form-control" style="width: 100%;" [(ngModel)]="endereco">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="nome">Telefone</label>
+                            <input type="text" formControlName="telefone" class="form-control" style="width: 100%;" [(ngModel)]="telefone">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="nome">Email</label>
+                            <input type="text" formControlName="email" class="form-control" style="width: 100%;" [(ngModel)]="email">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class=" modal-footer">
+            <div class="container">
+                <button class="btn btn-info" type="submit">Editar
+                </button>
+                <button type="button" class="btn btn-light ml-2" (click)="closeModalCadastroForm()">Cancelar
+                </button>
+            </div>
+        </div>
+    </form>
+
+</ng-template>
