--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color: #14b2cc;">
-    <a class="navbar-brand text-light" href="#">Recebimento de Cestas Básicas</a>
+    <a class="navbar-brand text-white titulo" href="#">OngFriends</a>
     
-  <div class="navbar-nav ml-auto px-5">
+  <div class="navbar-nav ml-auto px-5 menus">
     <a class="nav-link text-light" href="#">Home</a>
     <a class="nav-link text-light" routerLink="/cadastro">Cadastrar</a>
     <a class="nav-link text-light" routerLink="/verificar">Verificar</a>
