--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,14 +1,22 @@
 
 <div class="container">
-    <h1 >Sobre</h1>
+    <h1 class="display-4 mb-4">Quem somos</h1>
    <div class="row">
         <div class="col-md-8 mb-5">
            
-            <p class="text-justify"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus fuga voluptatum beatae repellat soluta earum, nulla possimus vel ut enim doloremque quos amet, alias quod itaque sint accusamus cumque et.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate aliquid obcaecati ducimus deleniti consequuntur possimus reprehenderit, quod cum! Eaque aperiam iste cum perspiciatis. Quis culpa temporibus dicta quasi expedita iure?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias omnis ratione, enim veniam consequuntur quod eveniet ipsam dolor aperiam unde placeat, numquam amet dicta dignissimos, voluptates odio nobis nisi. Sint?
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi totam sapiente culpa consequuntur assumenda distinctio laboriosam voluptates velit ipsa illum, recusandae commodi aliquid expedita, impedit sequi repellendus dolore vel vitae!lorem
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id officia nesciunt modi nisi vel non qui. Temporibus, voluptas explicabo corporis, suscipit libero voluptatibus minus natus delectus commodi, fugiat deserunt eaque?</p>
+            <p class="text-justify mb-5 font"> 
+                Somos uma ONG que trabalha para diminuir a fome no Brasil. Há mais de 10 anos estamos ajudando famílias que sofrem por conta do desemprego, e consequentemente pela fome,
+                 com doações de alimentos mensalmente. Distribuimos cestas básicas para as famílias que fazem um cadastro antes pelo site ou indo em nosso endereço físico. 
+
+                
+            </p>
+            <h2 class="display-4 mb-5 ">Dados da Fome no Brasil</h2>
+            <p class="text-justify mb-5 font">
+                Mais de 116,8 milhões de pessoas estão em situação de insegurança alimentar ou passando fome no Brasil, segundo pesquisa feita em dezembro de 2020 pela Rede Brasileira de Pesquisa em Soberania e Segurança Alimentar e Nutricional (Rede Penssan). O número, que é mais da metade do número de brasileiros, engloba pessoas que não se alimentam como deveriam, com qualidade e em quantidade suficiente.
+
+                Desses 116 milhões, cerca de 43 milhões (20,5% dos brasileiros) não contavam com alimentos em quantidade suficiente e 19 milhões da população (9%) estavam passando fome, maior taxa desde 2004. Além de ser o maior índice em 17 anos, é quase o dobro do registrado em 2018, quando o IBGE identificou 10 milhões de brasileiros nessa condição.
+
+            </p>
         </div>
        <div class="col-md-4">
            <div class="imgAbt ">
